Some refactor and changes for frontend application. Adding excel template engine